# infrastructure-lab

./: 404.html  AGENTS.md  Dockerfile  LICENSE  PLAYBOOK.md  README.md  alembic.ini  app.py  db.py  index.html  mkdocs.yml  models.py  pyproject.toml  schemas.py
.ai/: KNOWLEDGE_SCHEMA.md  SAFE_OPERATIONS.md  STYLEGUIDE.md  TERRAFORM_RULES.md
.githooks/: pre-push
.github/workflows/: docker-builder.yml
.pi/: settings.json
.pi/extensions/: dirty-repo-guard.ts  git-checkpoint.ts  infra-commands.ts  permission-gate.ts  protected-paths.ts  status-line.ts
.pi/prompts/: create-skill.md  create-template.md  phase-implement.md  phase-review.md  phase-runbook.md  plan.md
alembic/: env.py
alembic/versions/: 20260413_0001_create_deployments_table.py  20260414_0002_grafana_reader_role.py
ansible/: ansible.cfg
ansible/inventory/: hosts.yml
docs/: index.md
docs/phase13/: observability-runbook.md  observability.md
docs/phase14/: adr-023-progressive-delivery-strategy.md  progressive-delivery-runbook.md  progressive-delivery.md
docs/phase3/: containerization.md
docs/phase5/: adr-006-k3s.md
gitops/: argocd-values.yaml  values-observability.yaml
gitops/apps/: argo-rollouts-aws.yaml  argo-rollouts.yaml  argocd.yaml  cloudflare-tunnel.yaml  cluster-issuers-aws.yaml  issuers.yaml  observability.yaml  platform-secrets-aws.yaml  redis.yaml  root.yaml  secrets.yaml  status-api-cloud.yaml  status-api.yaml
scripts/: deploy.sh  generate_phase14_sealed_secrets.sh  setup_me.sh  watchdog.py
search/: search_index.json
tests/: test_app.py  test_status_api.db
(+69 files in other folders)
