[project]
name = "infrastructure-lab"
version = "0.1.0"
description = "Infrastructure Lab Status API"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.135.1",
    "mako>=1.3.12",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg[binary]>=3.2.10",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.44",
    "urllib3>=2.7.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "httpx>=0.28.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "pytest>=9.0.2",
]
